--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "redux": "^4.0.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
-    "styled-reset": "^4.2.1"
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -62,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/patrick-narciso/restaurants-search.git",
+  "license": "MIT"
 }
